chore: GraalVM JDK 20 changes